# antigravity-plugin-cc

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  publish.yml
plugin/.claude-plugin/: marketplace.json  plugin.json
plugin/commands/: approve.md  cancel.md  deny.md  events.md  handoff.md  implement.md  retry.md  review.md  setup.md  status.md  watch.md
plugin/hooks/: hooks.json  session_start.sh
plugin/scripts/: cao-companion.py
scripts/: README.md  bump-version.sh  create-test-workstation.sh
src/cao/: models.py
src/cao/runtime/: approval_store.py  approval_waiter.py  auth.py  compat.py  daemon.py  defaults.py  event_bus.py  (+12 more)
tests/: conftest.py  test_approval_store.py  test_approval_waiter.py  test_auth.py  test_companion_backend.py  test_companion_socket.py  test_compat.py  test_daemon_dispatch.py  test_defaults.py  test_digest_generator.py  test_event_bus.py  test_flag_foundation.py  test_git_diff_collector.py  test_hook_adapter.py  test_implement_params.py  test_ipc.py  test_model_and_effort.py  test_multimodal.py  test_plugin_ipc_client.py  test_policy_engine.py  test_probe.py  test_probe_cache.py  test_session_manager.py  test_session_start.py  test_session_store.py  test_transcript_handoff.py  test_turn_timeout.py  test_workspace.py
tests/e2e/: README.md  conftest.py  fake_sdk.py  test_full_pipeline.py  test_live_smoke.py
(+6 files in other folders)
