[project]
name = "claude-antigravity-orchestrator"
version = "0.1.2"
description = "Claude Code plugin runtime for supervising Antigravity SDK workers"
license = {file = "LICENSE"}
authors = [{ name = "jinseo-jang", email = "jinseo.jang@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "anyio>=4.0",
  "keyring>=24",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]
sdk = ["google-antigravity>=0.1.5"]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
